overflow x fixed

--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -1,8 +1,5 @@
 .hero-section {
   height: 100vh;
-  /* display: flex; */
-  /* justify-content: center; */
-  /* align-items: center; */
   position: relative;
   background-size: cover;
   background-position: center;
@@ -14,28 +11,8 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5); /* Dark overlay */
+  background: rgba(0, 0, 0, 0.5);
 }
-
-/* .hero-section h1,
-.hero-section p,
-.hero-btn {
-  position: relative;
-  z-index: 2;
-} */
-
-/* .hero-btn {
-  background-color: #890010;
-  border: none;
-  padding: 12px 30px;
-  font-size: 18px;
-  font-weight: bold;
-  transition: background-color 0.3s ease-in-out;
-} */
-
-/* .hero-btn:hover {
-  background-color: #a50012;
-} */
 
 .hero-btn {
   margin-top: 20px;
@@ -59,6 +36,13 @@ h1 {
 }
 
 @media (max-width: 768px) {
+  .hero-section {
+    height: 90vh;
+    position: relative;
+    background-size: cover;
+    background-position: center;
+  }
+
   h1 {
     font-size: 2.5rem;
   }
